# this template was largely inspired by "Nine Rules for Creating Procedural Macros in Rust" by Carl M. Kadie
# https://towardsdatascience.com/nine-rules-for-creating-procedural-macros-in-rust-595aa476a7ff

[workspace]
members = [
    "proc_macro_template_example",
    "proc_macro_template_example_core",
]